# RSP

./: CMakeLists.txt
src/: main.cu
src/config/: CMakeLists.txt  config.cpp  config.hpp
src/cuda_utils/: cuda_utils.hpp
src/data_types/: CMakeLists.txt  datatypes.cu  datatypes.cuh
src/doa_processing/: CMakeLists.txt  doa_processing.cu  doa_processing.cuh
src/ego_estimation/: CMakeLists.txt  ego_estimation.cu  ego_estimation.cuh
src/ghost_removal/: CMakeLists.txt  ghost_removal.cu  ghost_removal.cuh
src/mimo_synthesis/: CMakeLists.txt  mimo_synthesis.cu  mimo_synthesis.cuh
src/peak_detection/: CMakeLists.txt  peak_detection.cu  peak_detection.cuh
src/preprocessing/: CMakeLists.txt  fft_processing.cu  fft_processing.cuh
src/rcs/: CMakeLists.txt  rcs.cu  rcs.cuh
src/target_processing/: CMakeLists.txt  target_processing.cu  target_processing.cuh  target_types.cuh
